--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src='main.js'></script>
+    <script defer src='main.js'></script>
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
         <br/>
         <h2>Enter Your Value</h2>
         <br/>
-            <form onsubmit="function add(event) ; return false">
+        <form  onsubmit=" function add( event ) ; return false ">
             <value>
                 <h2>Value 1</h2>
                 <row>
@@ -80,8 +80,8 @@
                     <input required class="input" id="y9" type="number">
                 </row>
             </value>
-                    <button class="button" type="submit">Add</button>
-            </form>
+            <button class="button" type="submit">Add</button>
+        </form>
             <result>
             <value>
                 <h2>Result</h2>
