--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br/>
         <h2>Enter Your Value</h2>
         <br/>
-        <form  onsubmit=" function add( event ) ; return false ">
+        <form  onsubmit="add(event)">
             <value>
                 <h2>Value 1</h2>
                 <row>
