--- a/subtract.html
+++ b/subtract.html
@@ -21,7 +21,6 @@
             <li><a href="./index.html">Add</a></li>
             <li><a class="white" href="./subtract.html">Subtract</a></li>
             <li><a href="./multiply.html">Multiply</a></li>
-            <li><a href="./divide.html">Divide</a></li>
         </ul>
     </header>
     <m-header>
@@ -34,7 +33,6 @@
               <li><a class="dropdown-item" href="./index.html">Add</a></li>
               <li><a class="dropdown-item white" href="./subtract.html">Subtract</a></li>
               <li><a class="dropdown-item" href="./multiply.html">Multiply</a></li>
-              <li><a class="dropdown-item" href="./divide.html">Divide</a></li>
             </ul>
           </div>
         </m-header>
@@ -43,7 +41,7 @@
         <br/>
         <h2>Enter Your Value</h2>
         <br/>
-            <form onsubmit="function subtract(event) ; return false">
+            <form onsubmit="subtract(event)">
             <value>
                 <h2>Value 1</h2>
                 <row>
