--- a/3x3.html
+++ b/3x3.html
@@ -12,15 +12,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src='main.js'></script>
+    <script defer src='main.js'></script>
 </head>
 <body>
     <header>
         <h1>Matrix Calculator</h1>
         <ul>
-            <li><a href="./index.html">Add</a></li>
-            <li><a href="./subtract.html">Subtract</a></li>
-            <li><a class="white" href="./multiply.html">Multiply</a></li>
+            <li><a href="./index.html">2x2</a></li>
+            <li><a class="white" href="./3x3.html">3x3</a></li>
+            <li><a href="./4x4.html">4x4</a></li>
+            <li><a href="./divide.html">Divide</a></li>
         </ul>
     </header>
     <m-header>
@@ -30,18 +31,19 @@
               Menu
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="./index.html">Add</a></li>
-              <li><a class="dropdown-item" href="./subtract.html">Subtract</a></li>
-              <li><a class="dropdown-item white" href="./multiply.html">Multiply</a></li>
+              <li><a class="dropdown-item" href="./index.html">2x2</a></li>
+              <li><a class="dropdown-item white" href="./3x3.html">3x3</a></li>
+              <li><a class="dropdown-item" href="./4x4.html">4x4</a></li>
+              <li><a class="dropdown-item" href="./divide.html">Divide</a></li>
             </ul>
           </div>
         </m-header>
     <content>
-        <h1>Matrix Multiplication</h1>
+        <h1>Matrix 3x3</h1>
         <br/>
         <h2>Enter Your Value</h2>
         <br/>
-            <form onsubmit="multiply(event)">
+        <form>
             <value>
                 <h2>Value 1</h2>
                 <row>
@@ -78,8 +80,12 @@
                     <input required class="input" id="y9" type="number">
                 </row>
             </value>
-                    <button class="button" type="submit">Multiply</button>
-            </form>
+            <buttons>
+            <button class="button" type="submit" onclick="add(event)">Add</button>
+            <button class="button" type="submit" onclick="subtract(event)">Subtract</button>
+            <button class="button" type="submit" onclick="multiply(event)">Multiply</button>
+            </buttons>
+        </form>
             <result>
             <value>
                 <h2>Result</h2>
