all matrices done

--- a/4x4.html
+++ b/4x4.html
@@ -21,20 +21,18 @@
             <li><a href="./index.html">2x2</a></li>
             <li><a href="./3x3.html">3x3</a></li>
             <li><a class="white" href="./4x4.html">4x4</a></li>
-            <li><a href="./divide.html">Divide</a></li>
         </ul>
     </header>
     <m-header>
         <h1>Matrix Calculator</h1>
         <div class="dropdown">
-            <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-success dropdown-toggle menu" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Menu
             </button>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="./index.html">2x2</a></li>
               <li><a class="dropdown-item" href="./3x3.html">3x3</a></li>
               <li><a class="dropdown-item white" href="./4x4.html">4x4</a></li>
-              <li><a class="dropdown-item" href="./divide.html">Divide</a></li>
             </ul>
           </div>
         </m-header>
